# AK-Infer-Lab

./: .env.example  .gitattributes  .gitignore  AGENTS.md  AK 协同  README.md  pyproject.toml  方案 2.md  步骤 1 内容.md  融合方案.md
AK 协同/: Deep Research 反向回顾报告 可核验整合版 小算力大模型推理落地与推理仿真系统构建.md  Deep Research 反向回顾报告 第一轮 小算力大模型推理落地与推理仿真系统构建的 Deep Research 报告.md  Deep Research 反向回顾报告 第一轮 提示词 小算力大模型推理落地与推理仿真系统构建的 Deep Research 报告.md  Deep Research 反向回顾报告 第三轮可核验版 小算力大模型推理落地与推理仿真系统构建.md  Deep Research 反向回顾报告 第二轮 小算力大模型推理落地与推理仿真系统构建的 Deep Research 报告.md  Deep Research 反向回顾报告 第二轮 提示词 小算力大模型推理落地与推理仿真系统构建的 Deep Research 报告.md  Deep Research 反向回顾报告 面向本地小算力一体机与塔式服务器的异构推理协同软硬件协同机制系统性研究报告（2025–2026） .md  Deep Research 反向回顾报告 面向本地小算力一体机与工作站的异构推理协同及存储分层软硬件协同机制研究报告（2025–2026） .md  Deep Research 反向回顾报告 面向本地小算力异构推理协同的第一轮 Deep Research 报告.md  Deep Research 反向回顾报告 面向本地小算力异构推理协同的第三轮 Deep Research 报告.md  Deep Research 反向回顾报告 面向本地小算力异构推理协同的第二轮 Deep Research 报告.md  deep research 报告 2 ASPLOS - ISCA - MICRO - HPCA：软硬协同、异构内存、CPU+NPU 协同.md  deep research 面向 Ascend NPU 与 Kunpeng CPU 协同的小算力一体机深度学术调研 .md  deep research 面向 Ascend NPU 与 Kunpeng CPU 协同的小算力一体机深度学术调研.md  deep research 面向小算力一体机的异构算力协同深度学术调研 .md  代表工作原文硬件拓扑映射精读笔记.md  大模型推理硬件层面对照地图.md
docs/: DEEPSEEK_V4_FLASH_ASCEND_PLAN.md  EXPERIMENT_PLAN.md  HARDWARE_FEEDBACK.md  METRICS_AND_TRACE_SCHEMA.md  P8_LAYERED_ENGINEERING_PROTOTYPE_PLAN.md  PROJECT_CHARTER.md  Prefix Cache 零命中问题.md  README.md  SOURCES_AND_BOUNDARIES.md  TECHNICAL_ARCHITECTURE.md  USER_CONFIRMED_SERVER_FILE_TRANSFER_IMPLEMENTATION_PLAN.md  网站风格描述.md
reference_repos/: README.md
(+1219 files in other folders)
